manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-app
  namespace: node-app
spec:
  selector:
    app: node-app
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
